Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Package.java
/*
 * @test /nodynamiccopyright/
 * @bug 4901290
 * @summary Package annotations
 * @author gafter
 *
 * @compile/fail/ref=Package.out -XDrawDiagnostics  Package.java
 */

@java.lang.annotation.Documented
package foo.bar;
