Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Package.out
Package.java:10:1: compiler.err.pkg.annotations.sb.in.package-info.java
1 error
